<resources>
    <string name="app_name">Pojej In Povej</string>

    <!-- Login fragment -->
    <string name="login_title">Prijava</string>
    <string name="login_text">Prijavite se s svojim Google računom</string>
    <string name="login_text_alternative">Ali pa s Facebook računom</string>
    <string name="login_description">Zaradi preprečevanja zlorab sistema ocenjevanja aplikacij se v aplikacijo prijavite s svojim Google računom</string>
    <string name="login_button_text">PRIJAVA</string>
    <string name="logout_button_text">ODJAVA</string>
    <string name="com_facebook_loginview_log_out_button">Odjavi se</string>

    <!-- User profile fragment -->
    <string name="user_profile_title">Nastavitve</string>
    <string name="user_profile_food">Kako pomembna vam je hrana?</string>
    <string name="user_profile_offer">Kako pomembna vam je ponudba?</string>
    <string name="user_profile_service">Kako pomembna vam je postrežba?</string>
    <string name="user_profile_logged_in_as">Trenutno ste prijavljeni kot</string>

    <!-- Main screen fragment -->
    <string name="main_screen_suggested_text">Priporočene restavracije za vas</string>
    <string name="main_screen_suggested_2_text">Priporočene restavracije v bližini</string>
    <string name="main_screen_search_hint">Vpišite ime restavracije</string>
    <string name="botton_app_info">Pojej &amp; Povej - 2020</string>

    <!-- search fragment-->
    <string-array name="filter_items">
        <item>Ocena</item>
        <item>Cena</item>
        <item>Oddaljenost</item>
    </string-array>

    <!-- Restaurant details -->
    <string name="rating_food">Hrana</string>
    <string name="rating_offer">Ponudba</string>
    <string name="rating_service">Postrežba</string>
    <string name="currency">€</string>
    <string name="error_loading_restaurant_picture">Prišlo je do napake pri nalaganju slike</string>
    <string name="rate_restaurant_title">Ocenite restavracijo</string>
    <string name="rate_restaurant_text">Ocenite restavracijo na kriterijih hrana, ponudba in postrežba z oceno 1–5 in napišite komentar.</string>
    <string name="cancel">Prekini</string>
    <string name="confirm">Potrdi</string>
    <string name="review_sent">Vaša ocena je bila oddana</string>
    <string name="picture_loading_error">Prišlo je do napake pri nalaganju slike. Preverite ali imate povezavo s spletom.</string>


    <!-- general error messages -->
    <string name="not_available_error">Ni na voljo</string>

    <!-- facebook -->
    <string name="facebook_app_id">778513599298908</string>
    <string name="fb_login_protocol_scheme">fb778513599298908</string>
    <string name="facebook_client_token">8209f3e23f3646fdbd5fe7c6f9facd9d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
