<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_food"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/review_alert_food_rating"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:isIndicator="false"
        android:transitionName="restaurant_star_icon"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rating_offer"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_alert_food_rating" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/review_alert_offer_rating"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:isIndicator="false"
        android:transitionName="restaurant_star_icon"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rating_service"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_alert_offer_rating" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/review_alert_service_rating"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:isIndicator="false"
        android:transitionName="restaurant_star_icon"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:counterEnabled="true"
        app:counterMaxLength="200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_alert_service_rating">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/review_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>